# watermemo

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: docker.yml  test.yml
core/: admin.py  api.py  apps.py  integration.py  models.py  schemas.py  signals.py  tasks.py
core/management/commands/: consolidate.py  redistill.py
core/migrations/: 0001_initial.py  0002_manual__bootstrap_database.py  0003_remove_eventmemory_content.py  0004_manual__pg_trgm.py  0005_distillation_memory_alter_eventmemory_options.py  0006_distillation_add_memory_fk.py  0007_add_embedding_vector.py  0008_drop_eventmemory.py  0009_alter_distillation_memory.py  0010_distillation_is_core.py  0011_memory_user_id.py  0011_memory_user_id_nullable.py  0012_memory_user_id_nullable.py
core/prompts/: CLASSIFY.md  CORE_EVAL.md  DISTILLATION.md  RECALL.md
core/templates/core/: debug.html
docs/: api.rst  architecture.rst  commands.rst  conf.py  configuration.rst  deployment.rst  filter.rst  index.rst  quickstart.rst
memorai/: asgi.py  settings.py  wsgi.py
open_webui/: filter.py
tests/: conftest.py  test_api.py  test_filter.py  test_models.py  test_security.py  test_tasks.py
watermemo/: settings.py  urls.py  wsgi.py
