[project]
name = "watermemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=5.2",
    "django-ninja>=1.4.0",
    "gunicorn>=23.0.0",
    "uvicorn[standard]>=0.34.0",
    "openai>=1.68.2",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.2.0",
    "python-decouple>=3.8",
    "ruff>=0.15.7",
]

[tool.uv]
dev-dependencies = [
    "django-stubs[compatible-mypy]>=5.1.0",
]
